large review overflow hidden fixed

--- a/frontend/src/components/SpotDetail/SpotDetail.module.css
+++ b/frontend/src/components/SpotDetail/SpotDetail.module.css
@@ -2,7 +2,6 @@
     margin: 0 auto;
     max-width: 1000px;
     max-height: 100vh;
-    overflow: hidden;
 }
 
 .spotDetailInfo {
@@ -180,12 +179,28 @@
     display: none;
 }
 
+.reviewsSection {
+    width: 100%;
+    height: 100%;
+}
+
+
+.reviewsContainer {
+    width: 100%;
+    height: 100%;
+    margin-top: 20px;
+}
+
 .review {
-    margin: 20px 20px 0 0;
+    width: 100%;
+    height: auto;
+    /* margin: 20px 20px 0 0; */
 }
 
 .reviewBody {
+    margin: 0;
     text-align: left;
+    padding-bottom: 50px;
 }
 
 .reviewRating {
